# serializer

./: .anchored_summary.md  .gitignore  BRUTAL_THRUTHS.md  BRUTAL_TRUTHS.md  BUN.md  Cargo.toml  ENCODER_VS_HANDWRITTEN.md  Justfile  LLM.md  LLM_FORMAT_SPEC.md  README.md  _bench50.py  _big50.json  _showdown2.py  _spec_data.json  azure-pipelines.yml  bench_real.py  benchmark_all_formats.py  dx_vs_toon_final.py  eslint.config.ts  gen_toon.js  package-lock.json  package.json  showdown.py  test_encode.ts  token_bench.py
.circleci/: config.yml
.dx/serializer/: dx.llm  dx.machine
.github/workflows-disabled/: ci.yml.disabled
benches/: benchmark_data.py  comprehensive.rs  dx_adaptive_vs_rkyv.rs  dx_zero_bench.rs  machine_format_compression_comparison.rs  machine_format_perf.rs  machine_vs_rkyv.rs  theme_compression_test.rs  zstd_cache_roundtrip.rs
benchmark/: config.json  config.sr  config.toon  deps50.json  deps50.jsonc  deps50.toon  deps50.yml  logs.json  logs.sr  logs.toon  logs.yml  project.json  project.toon  project.yml  users.jsonc  users.toon  users.yml
benchmarks/: BENCHMARKS_GUIDE.md  README.md  batch-toolcall.dx  batch-toolcall.json  batch-toolcall.jsonc  batch-toolcall.toon  batch-toolcall.yaml  coding-assistant-tools.dx  coding-assistant-tools.json  coding-assistant-tools.jsonc  coding-assistant-tools.toon  coding-assistant-tools.yaml  dx-breakdown-1-keyval.dx  dx-breakdown-2-table.dx  dx-breakdown-3-abbrev.dx  dx-breakdown-4-full.dx  dx-breakdown-original.json  large.dx  large.json  large.jsonc  large.toon  large.yaml  medium.dx  medium.json  medium.jsonc  medium.toon  medium.yaml  package.json  small.dx  small.json  small.jsonc  small.toon  small.toon-folded  small.yaml  tool-schema.dx  tool-schema.json  tool-schema.jsonc  tool-schema.toon  tool-schema.yaml  toolcall-multi.dx  (+14 more)
benchmarks/data/: github-repos.dx  github-repos.jsonc  github-repos.toon
benchmarks/showcase/: README.md  full-agent-schema.dx  full-agent-schema.json  full-agent-schema.jsonc  full-agent-schema.toon  full-agent-schema.yaml  mega-batch-call.dx  mega-batch-call.json  mega-batch-call.jsonc  mega-batch-call.toon  mega-batch-call.yaml
crates/derive/: Cargo.toml
crates/dx-config/: Cargo.toml
crates/dx-config/src/: lib.rs
derive/: Cargo.toml
docs/: BENCHMARKS.md  COMPACT.md  HUMAN.md  LLM.md  LOOSE.md  MACHINE.md  README.md  SERIALIZER.md  SYNTAX.md  index.md
docs/.vitepress/: config.ts  meta.ts
docs/cli/: index.md
docs/ecosystem/: implementations.md  (+1 more)
essence/: config.jsonc  config.yml  deps50.sr  logs.jsonc  project.jsonc  project.sr  users.json  users.sr
examples/: README.md  basic_usage.rs  bench_tokens.rs  benchmark.rs  builder_demo.rs  clean.dx  convert_package_json.rs  debug_tokens.rs  dx_playground_test.rs  dx_to_toon_convert.rs  format_comparison_test.rs  json_conversion.rs  sample.dx  sample.dx-compact  sample.json  sample.jsonc  sample.toon  space_separator_test.rs  string_interning.rs  verify_claims.rs
inspsirations/: README.md
sample-output/: big50.toon  sample-json.llm  sample-json.toon  sample.toon  sample_large-json.llm  sample_large.toon  showdown_data-json.llm  spec-example.toon
src/: base62.rs  base62_props.rs  binary_output.rs  biome_config.rs  builder.rs  compress.rs  encoder.rs  error.rs  error_props.rs  formatter.rs  js_cache_artifacts.rs  lib.rs  llm_models.rs  mappings.rs  optimizer.rs  parser.rs  parser_security_props.rs  safety.rs  schema.rs  tokenizer.rs  types.rs  utf8.rs  utf8_props.rs  value_props.rs  wasm.rs  watch.rs
tests/: adaptive_optimization_test.rs  battle_hardening_property_tests.rs  battle_hardening_tests.rs  brutal_cli_test.rs  converter_tests.rs  dx_format_spec.rs  e2e.rs  format_conversion_machine.rs  task_10_3_compact_syntax_serialization_props.proptest-regressions  task_10_3_compact_syntax_serialization_props.rs  task_11_4_prefix_elimination_serialization_props.rs  task_13_3_legacy_mode_props.rs  task_14_roundtrip_comprehensive.proptest-regressions  task_14_roundtrip_comprehensive.rs  task_15_error_handling.rs  task_16_essence_examples.rs  task_3_4_array_parsing_props.rs  task_5_3_compact_syntax_props.rs  task_8_4_serializer_output_props.rs  test_zstd.rs  zero_integration.rs
toon/: SPEC.md  package.json  pnpm-lock.yaml
zzz/: SERIALIZER_AND_JUST.md  _dx_vs_toon.py  _final_bench.py  benchmark_formats.py  sample.json  sample_large.json  showdown_data.json  spec_example.py  token_bench_final.py
(+115 files in other folders)
