[package]
name = "dx-serializer"
version = "1.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["DX Team <team@dx-www.dev>"]
description = "A token-efficient serialization format for LLM context windows with high-performance binary encoding"
repository = "https://github.com/dx-www/dx-www"
documentation = "https://docs.rs/dx-serializer"
keywords = ["serialization", "parser", "format", "performance", "zero-copy"]
categories = ["encoding", "parser-implementations", "asynchronous"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "serializer"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
dirs = "6.0"
dx-serializer-derive = { version = "1.0.0", path = "crates/derive", optional = true }
bytemuck = { version = "1.18", features = ["derive"] }
bytes = "1.5"
rustc-hash = "1.1"
memchr = "2.7"
blake3 = "1.5"
thiserror = "2.0"
indexmap = "2.7"
hashbrown = "0.15"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true, features = ["preserve_order"] }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.8", optional = true }
rkyv = { version = "0.8", features = ["bytecheck"] }
bincode = { version = "1.3", optional = true }

# LZ4 compression
lz4_flex = { version = "0.11", optional = true }

# Zstd compression
zstd = { version = "0.13", optional = true }

# Parallel processing
rayon = { version = "1.10", optional = true }

# Memory-mapped files
memmap2 = { version = "0.9", optional = true }

# Token counting for LLM models
tiktoken-rs = { version = "0.6", optional = true }
tokenizers = { version = "0.21", optional = true }

# File watching
notify = { version = "6.1", optional = true }

# WASM bindings
wasm-bindgen = { version = "=0.2.106", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Platform-specific async I/O (Linux io_uring)
[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7", optional = true }
libc = "0.2"

# Platform-specific async I/O (Windows IOCP)
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_IO",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rkyv = { version = "0.8", features = ["bytecheck"] }
rkyv_derive = "0.8"
proptest = "1.4"
tempfile = "3.14"
bincode = "1.3"
postcard = { version = "1.0", features = ["alloc"] }
hex = "0.4"
ctor = "0.2"

[features]
default = ["converters", "compression", "serde-compat"]
typed-cache = []
typed-cache-mmap = ["typed-cache", "mmap"]
serde-compat = ["serde", "bincode"]
converters = ["serde", "serde_json", "serde_yaml", "toml", "bincode"]
wasm = ["wasm-bindgen", "console_error_panic_hook", "converters", "compression"]
compression = ["compression-lz4", "compression-zstd"]
compression-lz4 = ["lz4_flex"]
compression-zstd = ["zstd"]
watch = ["notify"]
parallel = ["rayon"]
mmap = ["memmap2"]
arena = []
tiktoken = ["tiktoken-rs"]
tokenizers-hf = ["tokenizers"]
token-counting = ["tiktoken", "tokenizers-hf"]
derive = ["dx-serializer-derive"]

# TODO: Implement these advanced features
# async-io = ["io-uring", "windows-sys"]
# quantum = []
# simd = []
# machine-ultra = ["mmap", "arena", "quantum", "simd", "parallel", "compression"]

full = ["converters", "compression", "watch", "token-counting", "derive", "parallel"]

[[bin]]
name = "dx-serializer"
path = "src/bin/serialize.rs"

[[bin]]
name = "dx-sr-watch"
path = "src/bin/watch_daemon.rs"
required-features = ["watch"]
