[package]
name = "dx-config"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "DX project config discovery and loading from extensionless `dx` files"
license = "MIT OR Apache-2.0"

[features]
machine = ["dep:serializer"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
thiserror = "2.0"
serializer = { path = "../..", optional = true, package = "dx-serializer" }

[dev-dependencies]
tempfile = "3.14"
